[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/EnemyAI/Enemy_3.gd" type="Script" id=1]
[ext_resource path="res://Scripts/EnemyAI/Brachi_disable.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]

[node name="Brachinous" type="Node2D"]
script = ExtResource( 1 )
pursueSpeed = 500

[node name="Base" type="Node2D" parent="."]

[node name="Kinematic Body" type="KinematicBody2D" parent="Base" groups=[
"Brachi",
"Hazard",
]]
rotation = 1.5708
collision_layer = 16
collision_mask = 19
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Base/Kinematic Body"]
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="Graph_body" type="Polygon2D" parent="Base/Kinematic Body/CollisionShape2D"]
color = Color( 0.831373, 0.14902, 0.14902, 1 )
polygon = PoolVector2Array( -0.710009, 20.5395, -9.74972, -0.27267, -9.53954, -13.5168, -6.80665, -18.1417, -0.499867, -2.16472, 6.22725, -16.8804, 9.17041, -12.4657, 10.0113, -0.272741 )

[node name="Area2D" type="Area2D" parent="Base"]
rotation = 1.5708
collision_layer = 0
collision_mask = 32

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Base/Area2D"]
polygon = PoolVector2Array( 0, 0, 150, -400, -150, -400 )

[node name="Polygon2D" type="Polygon2D" parent="Base/Area2D/CollisionPolygon2D"]
color = Color( 0.933333, 0.329412, 0.0666667, 0.133333 )
polygon = PoolVector2Array( 0.5992, 0.806242, -150.593, -400.478, 151.158, -401.109 )

[node name="Timer" type="Timer" parent="Base"]

[node name="RayCastParent" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="RayCastParent"]
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 600 )
collision_mask = 34
[connection signal="body_entered" from="Base/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Base/Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Base/Timer" to="." method="_on_Timer_timeout"]
